@@ -1,5 +1,17 @@
 2007-02-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
+	* examples/Makefile.am:
+	* examples/hildon-get-password-dialog-example.c:
+	* examples/hildon-login-dialog-example.c:
+	* examples/hildon-set-password-dialog-example.c: Adding examples for
+	password dialogs.
+
+	* src/hildon-get-password-dialog.c: Doc fix.
+
+	* src/hildon-login-dialog.c: Do not show the username as hidden field. 
+
+2007-02-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
 	* HACKING: Adding a HACKING file with some basic rules of styling and
 	code formatting.
 
